# company-operations-data-gen

./: .gitignore  README.rst  pyproject.toml
src/company_operation_data_gen/: __init__.py  __main__.py  config.py  constants.py  customer.py  database.py  generate.py  history_behavior.py  history_customer.py  logging.py  models.py  promotion.py  schemas.py  scrape.py  transaction.py
support-files/: .env.example  company-operation-data-gen-daily.service  company-operation-data-gen-daily.timer  company-operation-data-gen-weekly.service  company-operation-data-gen-weekly.timer  source_db.schema.sql
tests/: test_customer.py  test_generate.py  test_promotion.py  test_transaction.py
tests/fixtures/: test_data.yaml
